# SshManager

./: README.md  meson.build  org.gnomel.Sshmanager.json
data/: meson.build  org.gnomel.Sshmanager.appdata.xml.in  org.gnomel.Sshmanager.desktop.in  org.gnomel.Sshmanager.gschema.xml
po/: meson.build
src/: app.vala  main.vala  meson.build  window.vala
src/config/: properties.vala
src/controllers/: appcontroller.vala
src/db/: db.vala  meson.build  tags.cCeIXw  tags.tH3Up8
src/model/: connection.vala  meson.build  tags.M7066X
src/view/: mainview.vala
src/widgets/: dialogpreferences.vala  headerbar.vala  newconnection.vala
